prevent scroll on iphones

--- a/src/css/generic/_reset.scss
+++ b/src/css/generic/_reset.scss
@@ -282,4 +282,5 @@ progress {
 
 .no-scroll {
   overflow: hidden;
+  position:relative;
 }
